Wed,  7 Mar 2007 15:46:34 +0100 <thp@perli.net>
        * doc/man/gpodder.1: Updated with new info and description
        * src/gpodder/console.py: Clean-up of old/attic code; better output
        * src/gpodder/liblogger.py: Debugging depending on the "--verbose" flag
        * src/gpodder/libgpodder.py: Sanitize feed URL; URL callback for reader
        * src/gpodder/gpodder.py: Don't display popup dialog, but modify main 
          window title if we're running a svn version of gPodder; use the new 
          sanitize_feed_url function from libgpodder; small clean-ups
        * bin/gpodder: Description in docstring; better handling of command 
          line arguments and calling of gpodder.console functions; the old 
          --debug flag is now called --local (makes more sense, after all)
        * Makefile: Don't run generators on "make release"; use new --local 
          and --verbose flags for "make test"; specify application name in 
          help2man call for manpage generation

Wed,  7 Mar 2007 11:53:37 +0100 <thp@perli.net>
        * data/artwork: Removed Tango artwork
        * src/gpodder/gpodder.py: Use artwork from current icon theme
        * setup.py: Do not install removed artwork data
        * bin/gpodder: Push version + release date

Wed,  7 Mar 2007 00:57:59 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py, setup.py, bin/gpodder: Clean-up and 
          small fixes to make package installation smoother

Tue,  6 Mar 2007 21:36:44 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: We're developing again - debugging on :)
        * bin/gpodder: We've got a svn version number again... (as always =)

Tue,  6 Mar 2007 21:24:06 +0100 <thp@perli.net>
        * README: ** gPodder 0.9.0 released **

Tue,  6 Mar 2007 20:55:19 +0100 <thp@perli.net>
        * doc/man/gpodder.1: Updated for 0.9.0
        * TODO: Updated for 0.9.0
        * src/gpodder/liblogger.py: Updated for 0.9.0
        * bin/gpodder: Updated for 0.9.0