@@ -32,7 +32,7 @@ or played back on the user's desktop.
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.9.0+svn200703072"
+__version__   = "0.9.0+svn200703073"
 __date__      = "2007-03-07"
 __copyright__ = "Copyright (c) 2005-2007 %s. All rights reserved." % __author__
 __licence__   = "GPL"
